@@ -58,6 +58,7 @@ Template for new versions:
 ## Fixes
 - `preserve-rooms`: don't erroneously release reservations for units that have returned from their missions but have not yet entered the fort map
 - `preserve-rooms`: handle case where unit records are culled by DF immediately after a unit leaves the map
+- `preserve-tombs`: properly re-enable after loading a game that had the tool enabled
 
 ## Misc Improvements
 
